--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title: A.P
 baseurl: "/ap"
-url: "https://kssim.github.io"
+url: "https://probationer070.github.io/"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
 # Author
 author:
-  name: KyeongSeob Sim
+  name: jaehwan Park
   desc: Hello nice to meet you
   email: ksub0912@gmail.com
   selfie: assets/img/profile.jpg
