blog pre-testing v 0.0.1

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author:
   name: jaehwan Park
   desc: Hello
   email: kogish13328@gmail.com
-  selfie: assets/img/profile_my.jpg
+  selfie: assets/img/profile_my_2.jpg
 
 # social
 social:
