--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: A.P
 baseurl: "/ap"
-url: "https://kssim.github.io"
+url: "https://probationer070.github.io"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
 # Author
@@ -9,7 +9,7 @@ author:
   name: KyeongSeob Sim
   desc: Hello nice to meet you
   email: ksub0912@gmail.com
-  selfie: assets/img/profile.jpg
+  selfie: assets/img/profile_me.jpg
 
 # social
 social:
@@ -19,11 +19,11 @@ social:
   dribbble:
   facebook: Test
   flickr:
-  github: kssim
+  github: probationer070
   google_plus:
   instagram:
   keybase:
-  linkedin: https://www.linkedin.com/in/kssim/ 
+  linkedin: https://www.linkedin.com/in/probationer070/ 
   pinterest:
   reddit:
   soundcloud:
