--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: A.P
+title: cl_victor Learning Archives
 baseurl: ""
 url: "https://probationer070.github.io"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
